[package]
authors = ["Mariusz Kryński <mrk@sed.pl>"]
description = "A webgl2 wasm32 render backend for Bevy Engine"
edition = "2018"
keywords = ["bevy", "webgl", "webgl2"]
license = "MIT"
name = "bevy_webgl2"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/bevy_gltf",
  "bevy/png",
]

[dependencies]
bevy = {path = "../bevy", version = "0.3.0", default-features = false}
winit = {version = "0.23.0", features = ["web-sys", "x11"], default-features = false}

log = {version = "0.4", features = ["release_max_level_info"]}
cfg-if = "1.0.0"
js-sys = "0.3.45"
parking_lot = "0.11.0"
wasm-bindgen = "0.2.59"
web-sys = {version = "0.3.45", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlActiveInfo',
  'WebGlVertexArrayObject',
]}

[dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"

[[example]]
name = "sprite"
path = "examples/2d/sprite.rs"

[[example]]
name = "sprite_sheet"
path = "examples/2d/sprite_sheet.rs"

[[example]]
name = "texture"
path = "examples/3d/texture.rs"

[[example]]
name = "load_gltf"
path = "examples/3d/load_gltf.rs"

[[example]]
name = "text"
path = "examples/ui/text.rs"
