[package]
authors = ["Mariusz Kryński <mrk@sed.pl>"]
description = "A webgl2 wasm32 render backend for Bevy Engine"
edition = "2018"
keywords = ["bevy", "webgl", "webgl2"]
license = "MIT"
name = "bevy_webgl2"
version = "0.4.2"
repository = "https://github.com/mrk-its/bevy_webgl2"
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*", "index.html", "fix_bevy_example.sh", "Makefile.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/bevy_gltf",
  "bevy/png",
]

[dependencies]
winit = {version = "0.24.0", features = ["web-sys"]}
bevy = { git = "https://github.com/bevyengine/bevy/", rev="1ca8ce4a799af8dab2d926366de9ac3c8d30939c", default-features=false }
regex = "1.4"
cfg-if = "1.0.0"
js-sys = "0.3.45"
parking_lot = "0.11.0"
wasm-bindgen = "0.2.59"
web-sys = {version = "0.3.45", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlActiveInfo',
  'WebGlVertexArrayObject',
]}

[dev-dependencies]
compile-time-run = "0.2"
rand = "0.8"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
# opt-level = 3

[[example]]
name = "sprite"
path = "examples/2d/sprite.rs"

[[example]]
name = "sprite_sheet"
path = "examples/2d/sprite_sheet.rs"

# disabled as it do not compile on github Actions
#[[example]]
# name = "contributors"
# path = "examples/2d/contributors.rs"

[[example]]
name = "3d_scene"
path = "examples/3d/3d_scene.rs"

[[example]]
name = "texture"
path = "examples/3d/texture.rs"

[[example]]
name = "load_gltf"
path = "examples/3d/load_gltf.rs"

[[example]]
name = "parenting"
path = "examples/3d/parenting.rs"

[[example]]
name = "z_sort_debug"
path = "examples/3d/z_sort_debug.rs"

[[example]]
name = "text"
path = "examples/ui/text.rs"

[[example]]
name = "button"
path = "examples/ui/button.rs"

[[example]]
name = "font_atlas_debug"
path = "examples/ui/font_atlas_debug.rs"

[[example]]
name = "text_debug"
path = "examples/ui/text_debug.rs"

[[example]]
name = "ui"
path = "examples/ui/ui.rs"

[[example]]
name = "breakout"
path = "examples/game/breakout.rs"

[[example]]
name = "shader_defs"
path = "examples/shader/shader_defs.rs"

[[example]]
name = "shader_custom_material"
path = "examples/shader/shader_custom_material.rs"

[[example]]
name = "mesh_custom_attribute"
path = "examples/shader/mesh_custom_attribute.rs"
